--- a/type tester/typer.html
+++ b/type tester/typer.html
@@ -19,7 +19,8 @@
     <p>This is a typing test. Your goal is to duplicate the provided text, EXACTLY, in the field below. The timer starts when you start typing, and only stops when you match this text exactly. Good Luck!</p>
   </div>
   <div class="display">
-    <input type="text" placeholder="The clock starts when you start typing." id="typeArea">
+    <textarea name="textarea" id="typeArea" rows="6" placeholder="The clock starts when you start typing."></textarea>
+    <!-- <input type="text"  id="typeArea"> -->
 </div>
 <div class="timer-start">
     <p id="">00:00:00</p>
@@ -27,6 +28,6 @@
 </div>
   </div>
   </div>
-  <script src=""></script>
+  <script src="typer.js"></script>
 </body>
 </html>
