--- a/type tester/typer.html
+++ b/type tester/typer.html
@@ -16,14 +16,14 @@
   </div>
   <div>
     <div class="briefing">
-    <p>This is a typing test. Your goal is to duplicate the provided text, EXACTLY, in the field below. The timer starts when you start typing, and only stops when you match this text exactly. Good Luck!</p>
+    <p id="origin-text">The text  to test. </p>
   </div>
   <div class="display">
     <textarea name="textarea" id="typeArea" rows="6" placeholder="The clock starts when you start typing."></textarea>
     <!-- <input type="text"  id="typeArea"> -->
 </div>
 <div class="timer-start">
-    <p id="">00:00:00</p>
+    <p id="kick-off">00:00:00</p>
     <button id="start">Start Over</button>
 </div>
   </div>
