--- a/dom/DOM.html
+++ b/dom/DOM.html
@@ -10,13 +10,13 @@
   </head>
   <body>
     <button id="open-btn">
-      <p>Where's our Modal?</p>
+      <p>Where's our Modal?</p> 
     </button>
     <div id="modal-container">
       <div id="modal">
         <p>Here I am!</p>
         <div id="close-btn">&times;</div> 
-        to create the close sign
+        <!-- to create the close sign -->
       </div>
     </div>
    
