--- a/html/notepad.html
+++ b/html/notepad.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="note.css">
 </head>
 <body>
-    <div class="containers">
+    <div class="container">
         <h1><img src="img1.png" alt=""> Notes</h1>
         <br>
         <button class="btn"><img src="img2.png" alt="">Create Notes</button>
