--- a/html/practice.html
+++ b/html/practice.html
@@ -17,9 +17,10 @@
     <br>
     <p id="sum-el">Sum:</p>
 </div>
-<button  onclick="startGame()">START GAME.</button>
+<button id="start-el" onclick="startGame()">START GAME</button>
 <br>
 <button onclick="newCard()" style="margin-top: 20px;">NEW CARD</button>
+<p id="player-el"></p>
 <script src="practice.js"></script>
 </body>
 </html>
