--- a/type tester/typer.html
+++ b/type tester/typer.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="typer.css">
 </head>
 <body>
-    
+  <header class="masthead">
+    <h1>Test Your Typing Speed</h1>
+  </header>  
+  <div class="intro">
+    <p>This is a typing test. Your goal is to duplicate the provided text, EXACTLY, in the field below. The timer starts when you start typing, and only stops when you match this text exactly. Good Luck!</p>
+  </div>
+  <div>
+    <div class="briefing">
+    <p>This is a typing test. Your goal is to duplicate the provided text, EXACTLY, in the field below. The timer starts when you start typing, and only stops when you match this text exactly. Good Luck!</p>
+  </div>
+  <div class="display">
+    <input type="text" placeholder="The clock starts when you start typing." id="typeArea">
+  </div>
+  </div>
 </body>
 </html>
